--- a/styles/base.scss
+++ b/styles/base.scss
@@ -54,8 +54,7 @@ body {
 .container {
   max-width: 1440px;
   width: 100%;
-  margin: 0 auto;
-  padding: 0 30px;
+  margin: 10px 15px 0;
   @media screen and (min-width: 1024px) {
     padding: 0 60px;
   }
@@ -100,8 +99,10 @@ h2 {
   width: 100%;
   color: white;
   z-index: 1;
+  background: rgba(245,245,250,0.2);
 
   @media screen and (min-width: 768px) {
+    background: none;
     padding-top: 0;
     li:nth-child(1) {
       color: $grey-text;
@@ -132,7 +133,7 @@ h2 {
       flex-direction: row;
       position: absolute;
       align-items: flex-start;
-      top: 30px;
+      top: 45px;
       gap: 4px;
       @media screen and (min-width: 768px) {
         svg:nth-child(1) {
@@ -175,7 +176,7 @@ h2 {
       }
 
       @media screen and (min-width: 768px) {
-        margin: 30px 0;
+        margin: 65px 0;
         position: absolute;
 
       }
@@ -198,12 +199,13 @@ h2 {
 
       .flex.first-row {
         display: flex;
-
+        @media screen and (min-width: 1024px) {
+          align-items: center;
+        }
 
         .lang-button {
           display: flex;
           align-items: center;
-          gap: 7px;
         }
 
         .lang-btn {
@@ -230,7 +232,6 @@ h2 {
           }
 
           &:nth-child(1) {
-            margin-left: 21px;
 
             @media screen and (min-width: 768px) {
               .lang-btn:nth-child(1) {
@@ -328,6 +329,7 @@ h2 {
             @media screen and (min-width: 768px) {
               display: flex;
               flex-direction: row;
+              align-items: center;
 
 
             }
@@ -336,8 +338,8 @@ h2 {
           .tel-header {
             font-weight: 700;
             position: absolute;
-            top: -6px;
-            right: 0;
+            top: -2px;
+            right: 29px;
 
             @media screen and (min-width: 768px) {
               margin-left: 0;
@@ -358,10 +360,8 @@ h2 {
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
-            align-items: flex-start;
-            margin-top: 20px;
-            padding: 0 0 3px 46px;
-            margin-left: 15px;
+            align-items: center;
+            margin-top: 50px;
 
 
           }
@@ -378,7 +378,6 @@ h2 {
       }
 
       .first-row {
-        background: rgba(245, 245, 250, 0.20);
         @media screen and (min-width: 768px) {
           background: none;
 
@@ -408,6 +407,7 @@ h2 {
         @media screen and (min-width: 768px) {
           gap: 15px;
           position: relative;
+          margin-top: 30px;
         }
 
         @media screen and (min-width: 1024px) {
@@ -465,8 +465,8 @@ h2 {
 
     .hamburger {
       position: absolute;
-      top: 100px;
-      right: 47px;
+      top: 93px;
+      right: 32px;
       margin-left: -2em;
       margin-top: -45px;
       width: 32px;
@@ -624,6 +624,9 @@ main {
 
 
 .footer {
+  .container{
+    margin: 0;
+  }
   padding-top: 0;
   background-color: $grey-bg;
   @media screen and (min-width: 768px) {
